fix: z-index of algolia

--- a/addon/styles/agola-search.css
+++ b/addon/styles/agola-search.css
@@ -8,7 +8,7 @@
 
 /* Dropdown styling */
 .ds-dropdown-results {
-  z-index: 1; // makes sure that the search is above the version selector
+  z-index: 1100; /* makes sure that the search is above the version selector and header */
 }
 .ds-dropdown-menu {
   width: 500px;
